# livesplit-core

./: .travis.yml  Cargo.toml
crates/livesplit-auto-splitting/: Cargo.toml
crates/livesplit-auto-splitting/src/: environment.rs  lib.rs  process.rs  runtime.rs
crates/livesplit-auto-splitting/src/process/: windows.rs
crates/livesplit-auto-splitting/src/runtime/: wasi.rs
crates/livesplit-auto-splitting/src/runtime/wasi/: fs.rs  ptr.rs  types.rs
crates/livesplit-hotkey/: Cargo.toml
src/: lib.rs
src/auto_splitting/: mod.rs
