[package]
name = "livesplit-auto-splitting"
version = "0.1.0"
authors = ["Christopher Serr <christopher.serr@gmail.com>"]
edition = "2018"

[dependencies]
wasmi = "0.3.0"
num-traits = "0.2.5"
num-derive = "0.2.2"
quick-error = "1.2.2"
winapi = { version = "0.3.5", features = ["handleapi", "memoryapi", "processthreadsapi", "tlhelp32", "winnt", "wow64apiset"] }
itertools = "0.8.0"
