[package]
name = "livesplit-auto-splitting"
version = "0.1.0"
authors = ["Christopher Serr <christopher.serr@gmail.com>"]
edition = "2018"

[dependencies]
# wasmi = "0.3.0"
# wasmer-runtime = { path = "../../../wasmer/lib/runtime" }
# wasmer-runtime = { git = "https://github.com/wasmerio/wasmer" }
wasmer-runtime = "0.5.7"
wasmer-runtime-core = "0.5.7"
wasmer-wasi = "0.5.7"
# wasmer-runtime = { git = "https://github.com/CryZe/wasmer", branch = "windows-calling-conventions" }
num-traits = "0.2.5"
num-derive = "0.2.2"
quick-error = "1.2.2"
itertools = "0.8.0"
log = "0.4.6"
lazy_static = "1.3.0"
rand = "0.6.5"

proc-maps = "0.1.6"
read-process-memory = "0.1.2"
sysinfo = "0.9.0"
